[package]
name = "base-62"
version = "0.1.0"
authors = ["Alex Grinman <alex@krypt.co>"]
edition = "2018"
description="encode to/from bytes to base62 string"
keywords=["base62", "encode", "decode"]
license = "MIT"
homepage = "https://github.com/kryptco/base62.rs"
repository = "https://github.com/kryptco/base62.rs"
readme = "README.md"

[dependencies]
num-bigint = "0.2.2"
num-traits = "0.2.6"
num-integer = "0.1.39"